<resources>
    <string name="app_name">Application_Client</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="pair">Pair</string>
    <string name="Toast_getPaired">Press Pair to start sending data (Thread)</string>
</resources>